# light-souls

./: .gitignore  README.md  package.json  pnpm-lock.yaml  splashscreen.html  tailwind.config.cjs  tsconfig.json  vite.config.ts
core/: Cargo.toml  tauri.conf.json
core/icons/: icon.icns
core/src/: main.rs
core/src/lib/: mem.rs  mod.rs
src/: App.tsx  main.tsx
src/components/: Button.tsx  Input.tsx
src/hooks/: index.ts
src/lib/: utils.ts
src/types/: main.d.ts
